//
//  ImageDetailIdentifiers.swift
//  StoreLabTask
//
//  Created by Mallikarjuna on 05/03/2023.
//

import Foundation


enum ImageDetailIdentifiers: String {
    case addToFavouriteButton = "addToFavouriteIdentifier"
    case backButton = "backButtonIdentifier"
    case detailLabel = "detailLabelIdentifier"
    case detailImage = "detailImageViewIdentifier"
    case okButton = "okButtonIdentifier"
}
