...
protocol FavouriteImagesViewControllerInput {
    func showFavouritesImagesLists(_ imagesList: [FavouriteImages], error: Error?)
}

class FavouriteImagesViewController: UIViewController {
    
    @IBOutlet weak var collectionView: UICollectionView!
    
    var output: FavouriteImagesInteractor?
    var router: FavouriteImagesRouter?
    var viewModel = FavouriteImagesViewModel()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Favourites"
        self.collectionView.accessibilityIdentifier = FavouriteImagesIdentifiers.collectionView.rawValue
        self.tabBarItem.accessibilityIdentifier = FavouriteImagesIdentifiers.tabBar.rawValue
        FavouriteImagesConfiguarator().configure(viewController: self)
        // Do any additional setup after loading the view.
    }
    
...
