...
    var viewModel = ImageListViewModel()
    var page: Int = 0
    var isPageRefreshing:Bool = false

    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Home"
        ImagesListConfiguarator().configure(viewController: self)
        self.collectionView.accessibilityIdentifier = ImagesListIdentifiers.collectionView.rawValue
        self.getImagesList()
        // Do any additional setup after loading the view.
    }

...
