...
    
    var isAddedToFavourite: Bool = false
    var isFromFavourites: Bool = false
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Image Details"
        self.setUpView()
        self.updateUI()
    }

    override func viewWillDisappear(_ animated: Bool) {
        super.viewWillDisappear(animated)
...
